--- a/example.html
+++ b/example.html
@@ -8,12 +8,13 @@
 			body {
 				width:400px;
 				margin:100px auto;
+				height:2000px;
 			}
 		</style>
     </head>
     <body>
 		<form id='exampleForm'>
-			<p>Just hit submit (it's a dummy form btw)</p>
+			<p>Just hit submit (it's a dummy form)</p>
 			<p><input name='name' /></p>
 			<p><input name='email' /></p>
 			<p><textarea></textarea></p>
